--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 body {
-  background: url('../src/images/background2.jpg');
-  background-size: cover;
+  /* background: url('../src/images/backgroundFinale.jpg');
+  background-size: cover; */
+  background-color: rgb(234, 234, 255);
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
